# opencodereview

./: .gitignore  AGENTS.md  LICENSE  README.md  SPEC.md  pyproject.toml
.reviews/: claude-opus-4.5-spec-review.opencodereview.yaml  yrashk-spec-review.opencodereview.yaml
examples/json/: 00-minimal.json  01-human-ai-collaboration.json  02-security-audit.json
examples/real-world/: architecture-review.yaml  changeset-review.yaml  file-review.yaml  lifecycle.yaml
examples/xml/: 00-minimal.xml  01-human-ai-collaboration.xml  02-security-audit.xml
examples/yaml/: 00-minimal.yaml  01-human-ai-collaboration.yaml  02-security-audit.yaml
linked-data/: context.jsonld  vocab.ttl
python/: README.md  pyproject.toml
python/src/opencodereview/: __init__.py  io.py  models.py
python/src/opencodereview/cli/: __init__.py  __main__.py
python/tests/: conftest.py  strategies.py  test_cli.py  test_examples.py  test_properties.py
schema/: opencodereview.schema.json  opencodereview.xsd
